refactor: (refactoring Api file and controller)
